# physics-qa-bot

./: .gitignore  README.md  pyproject.toml
physics_qa_bot/: assistant.py  document_loader.py  llm_wrapper.py  retriever.py  utils.py
