[project]
name = "physics-qa-bot"
version = "0.0.1"
description = "A physics QA bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdownify>=0.13.1",
    "pdfplumber>=0.11.4",
    "wandb>=0.18.1",
    "weave>=0.51.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
    "uv>=0.4.15",
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.6.7"
]

[tool.pytest.ini_options]
pythonpath = "."